<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_business_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="linked.linkedtest.BusinessCreate">

    <TextView
        android:text="@string/business_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/businessTitle"
        android:textSize="24sp"
        android:textColor="@color/prim_blue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_marginTop="14dp"
        android:id="@+id/imageButton2"
        android:scaleX="2"
        android:scaleY="2"
        android:layout_below="@+id/businessTitle"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/upload_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/uploadPicButton"
        android:textAllCaps="false"
        android:backgroundTint="@color/prim_blue"
        android:textColor="@android:color/white"
        android:layout_below="@+id/imageButton2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/full"
        android:ems="10"
        android:id="@+id/emailText2"
        android:background="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/uploadPicButton"
        android:layout_centerHorizontal="true"
        android:textSize="16sp" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/cPassText2"
        android:background="@android:color/white"
        android:layout_below="@+id/emailText2"
        android:layout_alignLeft="@+id/emailText2"
        android:layout_alignStart="@+id/emailText2"
        android:layout_marginTop="17dp"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/business_name"
        android:ems="10"
        android:id="@+id/nameText2"
        android:background="@android:color/white"
        android:layout_below="@+id/cPassText2"
        android:layout_alignLeft="@+id/cPassText2"
        android:layout_alignStart="@+id/cPassText2"
        android:layout_marginTop="17dp"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/business_address"
        android:ems="10"
        android:id="@+id/passText2"
        android:background="@android:color/white"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/nameText2"
        android:layout_alignLeft="@+id/nameText2"
        android:layout_alignStart="@+id/nameText2"
        android:textSize="16sp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/businessSpinner"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/passText2"
        android:layout_alignLeft="@+id/passText"
        android:layout_alignStart="@+id/passText"
        android:layout_marginTop="17dp"
        android:layout_alignRight="@+id/passText"
        android:layout_alignEnd="@+id/passText" />

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:background="@android:color/white"
        android:layout_marginTop="13dp"
        android:id="@+id/passText"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/businessSpinner"
        android:layout_alignLeft="@+id/passText2"
        android:layout_alignStart="@+id/passText2"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_confirm"
        android:ems="10"
        android:background="@android:color/white"
        android:layout_marginTop="16dp"
        android:id="@+id/cPassText"
        android:fontFamily="sans-serif"
        android:textSize="16sp"
        android:layout_below="@+id/passText"
        android:layout_alignLeft="@+id/passText"
        android:layout_alignStart="@+id/passText" />

    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:textAllCaps="false"
        android:backgroundTint="@color/prim_blue"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
