<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/light_gray"
    tools:context="linked.linkedtest.CreateAccount">

    <TextView
        android:text="@string/account_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="154dp"
        android:id="@+id/textView"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:fontFamily="sans-serif" />

    <Button
        android:text="@string/user"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/userButton"
        android:textAllCaps="false"
        android:backgroundTint="@color/prim_blue"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:textSize="18sp"
        android:onClick="user_ButtonClick"/>

    <Button
        android:text="@string/business"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userButton"
        android:layout_alignLeft="@+id/userButton"
        android:layout_alignStart="@+id/userButton"
        android:layout_marginTop="24dp"
        android:id="@+id/businessButton"
        android:textAllCaps="false"
        android:backgroundTint="@color/prim_blue"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <Button
        android:text="Menu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/businessButton"
        android:layout_alignLeft="@+id/businessButton"
        android:layout_alignStart="@+id/businessButton"
        android:layout_marginTop="24dp"
        android:id="@+id/tempButton"
        android:textAllCaps="false"
        android:backgroundTint="@color/prim_blue"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:onClick="visitMenu"/>
</RelativeLayout>